--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
+    "node-sass": "^4.13.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
@@ -30,7 +31,8 @@
     "eslint-plugin-vue": "^6.1.2",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.0"
   },
   "eslintConfig": {
     "root": true,
